--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "plant-pal-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "npx prisma db seed",
-    "vercel-build": "prisma generate && prisma db push && next build",
-    "build": "tsc --build",
-    "start": "node ./dist/index.js",
-    "nodemon": "nodemon ./src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.7.1",
-    "nodemon": "^3.1.7",
-    "prisma": "^5.20.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "@types/express": "^5.0.0",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
-  }
+    "name": "plant-pal-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "seed": "npx prisma db seed",
+        "vercel-build": "prisma generate && prisma db push && next build",
+        "build": "tsc",
+        "start": "node dist/src/index.js",
+        "nodemon": "nodemon src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.17",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^22.7.1",
+        "nodemon": "^3.1.7",
+        "prisma": "^5.20.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.2"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.20.0",
+        "@types/express": "^5.0.0",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0"
+    }
 }
